# aws-lambda-cpp-template

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  makefile
deploy/: policy.json
docker/: Dockerfile
src/: main.cpp
test/: test.json
